two activity screens and final activity added

--- a/res/layout/activity_final.xml
+++ b/res/layout/activity_final.xml
@@ -1,9 +1,10 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/FirstView"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="io.flakstad.eggejakten.FinalActivity" >
-
-</LinearLayout>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+    
+    <io.flakstad.eggejakten.ColorView
+      android:id="@+id/color"
+      android:layout_width="fill_parent"
+      android:layout_height="fill_parent"/>
+         
+</FrameLayout>
