--- a/res/layout/activity_second.xml
+++ b/res/layout/activity_second.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/FirstView"
+    android:id="@+id/SecondView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:contentDescription="@string/ic_launcher"
