--- a/res/layout/activity_final.xml
+++ b/res/layout/activity_final.xml
@@ -2,7 +2,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
     
-    <io.flakstad.eggejakten.ColorView
+    <io.flakstad.eggejakten.DistanceView
       android:id="@+id/color"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"/>
