--- a/res/layout/activity_first.xml
+++ b/res/layout/activity_first.xml
@@ -15,20 +15,12 @@
         android:contentDescription="@string/ic_launcher"
         android:src="@drawable/ic_launcher" />
 
-    <EditText
-        android:id="@+id/text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/textfield"
-        android:inputType="text"
-        android:text="@string/textfield" />
-
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:onClick="nextActivity"
-        android:text="@string/button" />
+        android:text="@string/start_button" />
 
 </LinearLayout>
